--- a/Login/app/src/main/res/values/strings.xml
+++ b/Login/app/src/main/res/values/strings.xml
@@ -10,4 +10,19 @@
     <string name="trouble_loggin_in">Trouble Logging in?</string>
     <string name="likes">Likes</string>
     <string name="top_picks">Top Picks</string>
+    <string name="_5_likes">5 Likes</string>
+    <string name="upgrade_to_gold_to_see">Upgrade to Gold to see</string>
+    <string name="people_who_have_already">people who have already</string>
+    <string name="liked_you">liked you.</string>
+    <string name="see_who_likes_you">see who likes you</string>
+    <string name="messages">Messages</string>
+    <string name="search_4_matches">Search 4 Matches</string>
+    <string name="new_matches">New Matches</string>
+    <string name="menere">Menere</string>
+    <string name="glen">Glen</string>
+    <string name="jeroen">Jeroen</string>
+    <string name="caitlin">Caitlin</string>
+    <string name="lauren">Lauren</string>
+    <string name="jem">Jem</string>
+
 </resources>
