--- a/Login/app/src/main/res/values/strings.xml
+++ b/Login/app/src/main/res/values/strings.xml
@@ -10,4 +10,16 @@
     <string name="trouble_loggin_in">Trouble Logging in?</string>
     <string name="likes">Likes</string>
     <string name="top_picks">Top Picks</string>
+    <string name="varsha_21">Varsha,21</string>
+    <string name="text_photo">Photo Tip:A smile should get their attention</string>
+    <string name="text_setting">SETTINGS</string>
+    <string name="text_add">ADD MEDIA</string>
+    <string name="text_edit">EDIT INFO</string>
+    <string name="text_my">My TINDER PLUS</string>
+    <string name="text_increase"> Increase Your Chances</string>
+    <string name="text_get">Get unlimited Likes with Tinder Plus</string>
+    <string name="text_stand">Stand Out with Super Likes</string>
+    <string name="text_namee">Get Matches Faster</string>
+    <string name="text_Boost">Boost your profile once a month</string>
+    <string name="text_yoy">you are more likely to get a match</string>
 </resources>
